crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__preview_with_fa100_no_future_annotations_UP045_2.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
--- Linter settings ---
+	future-rewritable-type-annotation (FA100),
+	future-rewritable-type-annotation (FA100),

--- Summary ---
Removed: 0
Added: 2

--- Added ---
FA100 [*] Add `from __future__ import annotations` to simplify `typing.Optional`
 --> UP045_2.py:5:10
  |
5 | def f(x: Optional[str]) -> None:
  |          ^^^^^^^^
6 |     ...
help: Add `from __future__ import annotations`
  |
1 + from __future__ import annotations
2 | import typing
  |
note: This is an unsafe fix and may change runtime behavior


FA100 [*] Add `from __future__ import annotations` to simplify `typing.Optional`
  --> UP045_2.py:9:10
 9 | def f(x: typing.Optional[str]) -> None:
   |          ^^^^^^^^^^^^^^^
10 |     ...
help: Add `from __future__ import annotations`
  |
1 + from __future__ import annotations
2 | import typing
  |
note: This is an unsafe fix and may change runtime behavior
