crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__unpack_pep_646_py311.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP044 [*] Use `*` for unpacking
 --> UP044.py:6:17
  |
6 | class C(Generic[Unpack[Shape]]):
  |                 ^^^^^^^^^^^^^
7 |     pass
help: Convert to `*` for unpacking
  |
5 |
  - class C(Generic[Unpack[Shape]]):
6 + class C(Generic[*Shape]):
7 |     pass
  |
note: This is an unsafe fix and may change runtime behavior

UP044 [*] Use `*` for unpacking
  --> UP044.py:10:17
   |
10 | class D(Generic[Unpack[Shape]]):
   |                 ^^^^^^^^^^^^^
11 |     pass
help: Convert to `*` for unpacking
   |
9  |
   - class D(Generic[Unpack[Shape]]):
10 + class D(Generic[*Shape]):
11 |     pass
   |
note: This is an unsafe fix and may change runtime behavior

UP044 [*] Use `*` for unpacking
  --> UP044.py:14:14
   |
14 | def f(*args: Unpack[tuple[int, ...]]):
   |              ^^^^^^^^^^^^^^^^^^^^^^^
15 |     pass
help: Convert to `*` for unpacking
   |
13 |
   - def f(*args: Unpack[tuple[int, ...]]):
14 + def f(*args: *tuple[int, ...]):
15 |     pass
   |
note: This is an unsafe fix and may change runtime behavior

UP044 [*] Use `*` for unpacking
  --> UP044.py:18:14
   |
18 | def f(*args: Unpack[other.Type]):
   |              ^^^^^^^^^^^^^^^^^^
19 |     pass
help: Convert to `*` for unpacking
   |
17 |
   - def f(*args: Unpack[other.Type]):
18 + def f(*args: *other.Type):
19 |     pass
   |
note: This is an unsafe fix and may change runtime behavior

UP044 [*] Use `*` for unpacking
  --> UP044.py:22:27
   |
22 | def f(*args: Generic[int, Unpack[int]]):
   |                           ^^^^^^^^^^^
23 |     pass
help: Convert to `*` for unpacking
   |
21 |
   - def f(*args: Generic[int, Unpack[int]]):
22 + def f(*args: Generic[int, *int]):
23 |     pass
   |
note: This is an unsafe fix and may change runtime behavior
